# toffy-oatpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  test_oatpp.cpp
cmake/: Config.cmake.in  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  toffy_oatpp_config.h.in
include/: globals.hpp
include/filters/: webAdapter.hpp
include/shared/: syncApi.hpp
include/toffy_oatpp/: config.hpp  globals.hpp  toffy_oatpp.hpp
include/toffy_oatpp/filters/: webAdapter.hpp
include/toffy_oatpp/shared/: syncApi.hpp
include/toffy_oatpp/shared/webapi/filters/: webListener.hpp
include/toffy_oatpp/toffy/: webAdapter.hpp  webListener.hpp
include/toffy_oatpp/webapi/: appComponent.hpp  swaggerComponent.hpp  webApp.hpp
include/toffy_oatpp/webapi/adapter/: btaAdapter.hpp
include/toffy_oatpp/webapi/controller/: btaAdapterController.hpp  frameInfoController.hpp  staticContentsController.hpp
include/toffy_oatpp/webapi/dto/: btaDto.hpp  camerSettingsDto.hpp  frameDto.hpp
include/webapi/: appComponent.hpp  swaggerComponent.hpp  webApiClient.hpp  webApp.hpp  webAppComponent.hpp
include/webapi/adapter/: btaAdapter.hpp
include/webapi/controller/: btaAdapterController.hpp  frameController.hpp  frameInfoController.hpp  measurementController.hpp  staticContentsController.hpp  testController.hpp  webAdapterController.hpp
include/webapi/dto/: btaDto.hpp  camerSettingsDto.hpp  frameDto.hpp  webAdapterDto.hpp
include/webapi/filters/: webAdapter.hpp  webListener.hpp
src/: CMakeLists.txt  globals.cpp
src/filters/: webAdapter.cpp  webListener.cpp
src/toffy/: webAdapter.cpp  webListener.cpp
src/webapi/: webApi.cpp  webApp.cpp
src/webapi/controllers/: btaAdapterController.cpp  webAdapterController.cpp
src/webapi/filters/: webAdapter.cpp  webListener.cpp
tests/: CMakeLists.txt  test_sync.cpp  webapi.cpp
xml/: p230_depth_ampl.xml  p230_phases.xml  p230_xyz.xml
